// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings panel with circHeatmap image should render 1`] = `
<CircHeatmapSettings
  changePlot={[Function]}
  changeSetting={[Function]}
  plots={Array []}
  resetSettings={[Function]}
  settings={Object {}}
  storeSettings={Object {}}
  updateSetting={[Function]}
/>
`;

exports[`Settings panel with dotplot image should render 1`] = `
<HeatmapSettings
  changeSetting={[Function]}
  resetSettings={[Function]}
  settings={Object {}}
  storeSettings={Object {}}
  updateSetting={[Function]}
/>
`;

exports[`Settings panel with heatmap image should render 1`] = `
<HeatmapSettings
  changeSetting={[Function]}
  resetSettings={[Function]}
  settings={Object {}}
  storeSettings={Object {}}
  updateSetting={[Function]}
/>
`;
